[package]
name = "doc_tools"
version = "1.0.1"
description = "文档处理工具"
authors = ["AdySec"]
edition = "2024"

[lib]
name = "doc_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zip = "0.6"
regex = "1"

